# fly-wss-example

./: Dockerfile  fly.toml  pyproject.toml  run.sh
fly_wss_example/: main.py
fly_wss_example/templates/: index.html
